MSS-245 - Correctly aligned hover state on radio

--- a/resources/assets/sass/video/programme-card.scss
+++ b/resources/assets/sass/video/programme-card.scss
@@ -72,9 +72,10 @@ $card-border-radius: 0.5em;
         .overlay {
             opacity: 0;
             position: absolute;
-            top: 0;
-            left: 10px;
-            right: 10px;
+            margin:0;
+            top: -1px;
+            left: 9px;
+            right: 9px;
             bottom: 20px;
             background: rgba(255, 255, 255, 0.9);
             border-radius: $card-border-radius;
